04-Network-Security-and-Cluster-Lifecycle/demos/m1-network-policies/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
---
apiVersion: v1
kind: Namespace
metadata:
  name: tools
