04-Network-Security-and-Cluster-Lifecycle/demos/m1-network-policies/tools-curl-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-test
  namespace: tools
spec:
  restartPolicy: Never
  containers:
  - name: curl
    image: curlimages/curl:latest
    command: ["/bin/sh","-c","sleep 36000"]
